--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               />
             </div>
             <div class="weather-details">
-              <p class="city">Moscow</p>
+              <p class="city">Wrocław</p>
               <p class="temperature">20 °C</p>
               <p class="feels">Feels like 19 °C</p>
               <p class="description">Sunny</p>
