--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 						</div>
 						<div class="weather-details">
 							<p class="city">Wrocław</p>
-							<p class="temperature">20 °C</p>
-							<p class="feels">Feels like 19 °C</p>
+							<p class="temperature">20°C</p>
+							<p class="feels">Feels like 19°C</p>
 							<p class="description">Sunny</p>
 						</div>
 					</div>
@@ -127,7 +127,6 @@
 										stroke="#ccc"
 										stroke-width="2"
 									/>
-									<!--Add class for sun if you want to make animation-->
 									<circle cx="50" cy="40" r="10" fill="#EC6E4C" />
 									<path
 										d="M20 40 A90 90 0 0 1 180 40"
@@ -137,7 +136,7 @@
 									/>
 								</svg>
 
-								<div class="day-length">Day length 12 hours 15 min</div>
+								<div class="day-length">Day length 12 hr 15 min</div>
 							</div>
 						</div>
 
@@ -157,7 +156,7 @@
 								src="https://openweathermap.org/img/wn/01d@2x.png"
 								alt="Weather"
 							/>
-							<p class="temp">20 °C</p>
+							<p class="temp">20°C</p>
 						</div>
 						<div class="hourly-item">
 							<p class="hour">Today</p>
@@ -166,7 +165,7 @@
 								src="https://openweathermap.org/img/wn/02d@2x.png"
 								alt="Weather"
 							/>
-							<p class="temp">19 °C</p>
+							<p class="temp">19°C</p>
 						</div>
 						<div class="hourly-item">
 							<p class="hour">Today</p>
@@ -175,7 +174,7 @@
 								src="https://openweathermap.org/img/wn/03d@2x.png"
 								alt="Weather"
 							/>
-							<p class="temp">18 °C</p>
+							<p class="temp">18°C</p>
 						</div>
 						<div class="hourly-item">
 							<p class="hour">Today</p>
@@ -184,7 +183,7 @@
 								src="https://openweathermap.org/img/wn/04d@2x.png"
 								alt="Weather"
 							/>
-							<p class="temp">17 °C</p>
+							<p class="temp">17°C</p>
 						</div>
 						<div class="hourly-item">
 							<p class="hour">Tomorrow</p>
@@ -193,7 +192,7 @@
 								src="https://openweathermap.org/img/wn/09d@2x.png"
 								alt="Weather"
 							/>
-							<p class="temp">16 °C</p>
+							<p class="temp">16°C</p>
 						</div>
 						<div class="hourly-item">
 							<p class="hour">Tomorrow</p>
@@ -202,7 +201,7 @@
 								src="https://openweathermap.org/img/wn/10d@2x.png"
 								alt="Weather"
 							/>
-							<p class="temp">15 °C</p>
+							<p class="temp">15°C</p>
 						</div>
 						<div class="hourly-item">
 							<p class="hour">Tomorrow</p>
@@ -211,7 +210,7 @@
 								src="https://openweathermap.org/img/wn/01d@2x.png"
 								alt="Weather"
 							/>
-							<p class="temp">15 °C</p>
+							<p class="temp">15°C</p>
 						</div>
 						<div class="hourly-item">
 							<p class="hour">Tomorrow</p>
@@ -220,7 +219,7 @@
 								src="https://openweathermap.org/img/wn/02d@2x.png"
 								alt="Weather"
 							/>
-							<p class="temp">19 °C</p>
+							<p class="temp">19°C</p>
 						</div>
 						<div class="hourly-item">
 							<p class="hour">Tomorrow</p>
@@ -229,7 +228,7 @@
 								src="https://openweathermap.org/img/wn/03d@2x.png"
 								alt="Weather"
 							/>
-							<p class="temp">18 °C</p>
+							<p class="temp">18°C</p>
 						</div>
 						<div class="hourly-item">
 							<p class="hour">Tomorrow</p>
@@ -238,7 +237,7 @@
 								src="https://openweathermap.org/img/wn/04d@2x.png"
 								alt="Weather"
 							/>
-							<p class="temp">17 °C</p>
+							<p class="temp">17°C</p>
 						</div>
 						<div class="hourly-item">
 							<p class="hour">Tomorrow</p>
@@ -247,7 +246,7 @@
 								src="https://openweathermap.org/img/wn/09d@2x.png"
 								alt="Weather"
 							/>
-							<p class="temp">16 °C</p>
+							<p class="temp">16°C</p>
 						</div>
 						<div class="hourly-item">
 							<p class="hour">Tomorrow</p>
@@ -256,7 +255,7 @@
 								src="https://openweathermap.org/img/wn/10d@2x.png"
 								alt="Weather"
 							/>
-							<p class="temp">15 °C</p>
+							<p class="temp">15°C</p>
 						</div>
 					</div>
 				</section>
@@ -272,8 +271,8 @@
 								alt="Weather"
 							/>
 							<div class="temp">
-								<p class="temp-day">21 °C</p>
-								<p class="temp-night">14 °C</p>
+								<p class="temp-day">21°C</p>
+								<p class="temp-night">14°C</p>
 							</div>
 						</div>
 						<div class="forecast-item">
@@ -284,8 +283,8 @@
 								alt="Weather"
 							/>
 							<div class="temp">
-								<p class="temp-day">22 °C</p>
-								<p class="temp-night">16 °C</p>
+								<p class="temp-day">22°C</p>
+								<p class="temp-night">16°C</p>
 							</div>
 						</div>
 						<div class="forecast-item">
@@ -296,8 +295,8 @@
 								alt="Weather"
 							/>
 							<div class="temp">
-								<p class="temp-day">18 °C</p>
-								<p class="temp-night">11 °C</p>
+								<p class="temp-day">18°C</p>
+								<p class="temp-night">11°C</p>
 							</div>
 						</div>
 						<div class="forecast-item">
@@ -308,8 +307,8 @@
 								alt="Weather"
 							/>
 							<div class="temp">
-								<p class="temp-day">15 °C</p>
-								<p class="temp-night">12 °C</p>
+								<p class="temp-day">15°C</p>
+								<p class="temp-night">12°C</p>
 							</div>
 						</div>
 						<div class="forecast-item">
@@ -320,8 +319,8 @@
 								alt="Weather"
 							/>
 							<div class="temp">
-								<p class="temp-day">17 °C</p>
-								<p class="temp-night">13 °C</p>
+								<p class="temp-day">18°C</p>
+								<p class="temp-night">13°C</p>
 							</div>
 						</div>
 					</div>
@@ -330,14 +329,12 @@
 			<button id="toTop">
 				<img src="public/icons/icon-toTop.png" alt="" />
 			</button>
-			<footer>
-				<a href="https://www.youtube.com/@user-web-garage" target="_blank">
-					<!--Remove 2025 if you will render year dynamically-->
-					© 2025<span id="currentYear"></span> Weather Forecast. All rights
-					reserved.
-				</a>
-			</footer>
+			      <footer>
+        <a href="https://www.youtube.com/@user-web-garage" target="_blank">
+          © <span id="currentYear"></span> Weather Forecast. All rights reserved.
+        </a>
+      </footer>
 		</div>
-		<script src="./main.js" type="module"></script>
+		<script src="main.js" type="module"></script>
 	</body>
 </html>
